# mecab_ko_dic_admin

./: .gitignore  README.md  manage.py  pyproject.toml
env/: .env  README.md  docker-compose.yaml
env/data/elastic/: Dockerfile
env/data/ubuntu/: Dockerfile
mecab_ko_dic_admin/: .gitignore  README.md
mecab_ko_dic_admin/config/: asgi.py  settings.py  urls.py  wsgi.py
